--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,12 +5,19 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
         {% endblock %}
 
         {% block javascripts %}
         {% endblock %}
     </head>
+    <header>
+        {% include 'nav.html.twig' %}
+    </header>
     <body>
         {% block body %}{% endblock %}
     </body>
+    <footer>
+        {% include 'footer.html.twig' %}
+    </footer>
 </html>
