--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,5 +1,6 @@
 <nav class="navbar">
     <ul>
         <li><a href="{{ path('home') }}">Home</a></li>
+        <li><a href="{{ path('app_auth') }}">Sign Up</a></li>
     </ul>
 </nav>
