--- a/templates/auth/signup.html.twig
+++ b/templates/auth/signup.html.twig
@@ -1,20 +1,15 @@
+{# templates/auth/signup.html.twig #}
+
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AuthController!{% endblock %}
+{% block title %}Sign Up{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/Symfony/blog_project/src/Controller/AuthController.php'|file_link(0) }}">src/Controller/AuthController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/Symfony/blog_project/templates/auth/index.html.twig'|file_link(0) }}">templates/auth/index.html.twig</a></code></li>
-    </ul>
+    <h1>Welcome to the Sign Up page!</h1>
+    
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    {{ form_end(form) }}
 </div>
 {% endblock %}
