--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <main>
         <section>
-            <h2>Latest Blog Posts</h2>
+            <h2>Latest Blog Posts {{ app.user.username }}</h2>
             {# You can loop through and display your latest blog posts here #}
         </section>
     </main>
