--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,6 +1,7 @@
 <nav class="navbar">
     <ul>
         <li><a href="{{ path('home') }}">Home</a></li>
-        <li><a href="{{ path('app_auth') }}">Sign Up</a></li>
+        <li><a href="{{ path('signup') }}">Sign Up</a></li>
+        <li><a href="{{ path('login') }}">Login</a></li>
     </ul>
 </nav>
