--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,7 +1,11 @@
 <nav class="navbar">
     <ul>
         <li><a href="{{ path('home') }}">Home</a></li>
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        <li><a href="{{ path('logout') }}">Logout</a></li>
+        {% else %}
         <li><a href="{{ path('signup') }}">Sign Up</a></li>
         <li><a href="{{ path('login') }}">Login</a></li>
+        {% endif %}
     </ul>
 </nav>
