--- a/templates/blog/edit.html.twig
+++ b/templates/blog/edit.html.twig
@@ -1,13 +1,19 @@
 {% extends 'base.html.twig' %}
 
+
 {% block title %}Edit Blog{% endblock %}
 
 {% block body %}
+    {% for flash_message in app.flashes('warning') %}
+        <div class="alert alert-warning">
+            {{ flash_message }}
+        </div>
+    {% endfor %}
     <h1>Edit Blog</h1>
 
-    {{ include('blog/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('blog/_form.html.twig', {'button_label': 'Update Blog'}) }}
 
-    <a href="{{ path('app_blog_index') }}">back to list</a>
+    <p><button><a href="{{ path('app_blog_index') }}">Back to Home</a></button></p>
 
     {{ include('blog/_delete_form.html.twig') }}
 {% endblock %}
