--- a/templates/blog/new.html.twig
+++ b/templates/blog/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('blog/_form.html.twig') }}
 
-    <a href="{{ path('app_blog_index') }}">back to list</a>
+    <p><button><a href="{{ path('app_blog_index') }}">Back to Home</a></button></p>
 {% endblock %}
