--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -3,44 +3,14 @@
 {% block title %}Blog{% endblock %}
 
 {% block body %}
-    <h1>Blog</h1>
+    <h1>{{blog.title}}</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ blog.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ blog.title }}</td>
-            </tr>
-            <tr>
-                <th>VideoUrl</th>
-                <td>{{ blog.videoUrl }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ blog.createdAt ? blog.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Edited</th>
-                <td>{{ blog.edited ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>EditedAt</th>
-                <td>{{ blog.editedAt ? blog.editedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>Text</th>
-                <td>{{ blog.text }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <p>{{ blog.createdAt ? blog.createdAt|date('Y-m-d H:i:s') : '' }} By: {{ blog.createdBy }}</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>{{ blog.text|nl2br|raw }}</p>
+    {% if (blog.edited) %}
+        <p>Edited : {{ blog.editedAt|date('d-M-Y H:i') }}</p>
+    {% endif %}
+    <p><button><a href="{{ path('app_blog_index') }}">Back to Home</a></button></p>
 
-    <a href="{{ path('app_blog_index') }}">back to list</a>
-
-    <a href="{{ path('app_blog_edit', {'id': blog.id}) }}">edit</a>
-
-    {{ include('blog/_delete_form.html.twig') }}
 {% endblock %}
