--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -3,7 +3,11 @@
         <li><a href="{{ path('home') }}">Home</a></li>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         <li><a href="{{ path('app_blog_new') }}">Create blog</a></li>
+        {% if is_granted('ROLE_admin') %}
+        <li><a href="{{ path('app_admin_blogs') }}">All Blogs</a></li>
+        {% else %}
         <li><a href="{{ path('app_blog_mine') }}">My blogs</a></li>
+        {% endif %}
         <li><a href="{{ path('logout') }}">Logout</a></li>
         {% else %}
         <li><a href="{{ path('signup') }}">Sign Up</a></li>
