--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -13,7 +13,7 @@
         <li><a href="{{ path('logout') }}">Logout</a></li>
         {% else %}
         <li><a href="{{ path('signup') }}">Sign Up</a></li>
-        <li><a href="{{ path('login') }}">Login</a></li>
+        <li><a href="{{ path('app_login') }}">Login</a></li>
         {% endif %}
     </ul>
 </nav>
