--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -12,7 +12,7 @@
         {% endif %}
         <li><a href="{{ path('logout') }}">Logout</a></li>
         {% else %}
-        <li><a href="{{ path('signup') }}">Sign Up</a></li>
+        <li><a href="{{ path('app_signup') }}">Sign Up</a></li>
         <li><a href="{{ path('app_login') }}">Login</a></li>
         {% endif %}
     </ul>
