--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -19,6 +19,7 @@
     </table>
 
     <button><a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a></button>
+    <button><a href="{{ path('app_change_password') }}">Change Password</a></button>
 
     {{ include('user/_delete_form.html.twig') }}
 
