--- a/templates/security/password.html.twig
+++ b/templates/security/password.html.twig
@@ -5,9 +5,7 @@
     <h1>Change Password</h1>
 
     {{ form_start(form) }}
-    {{ form_row(form.currentPassword) }}
-    {{ form_row(form.plainPassword) }}
-    {{ form_row(form.confirmPassword) }}
+    {{ form_widget(form) }}
 
     <button type="submit">Change Password</button>
     <button><a href="{{ path('app_user_show', {'id': app.user.id}) }}">Back to Profile</a></button>
