Added comments (add,edit,delete,admin)

--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -4,6 +4,7 @@
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         {% if is_granted('ROLE_admin') %}
         <li><a href="{{ path('app_admin_blogs') }}">All Blogs</a></li>
+        <li><a href="{{ path('app_admin_comments') }}">Comments</a></li>
         <li><a href="{{ path('app_admin_users') }}">Users</a></li>
         {% else %}
         <li><a href="{{ path('app_blog_new') }}">Create blog</a></li>
