--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -5,31 +5,15 @@
 {% block body %}
     <h1>{{blog.title}}</h1>
 
-    <p>{{ blog.createdAt ? blog.createdAt|date('Y-m-d H:i:s') : '' }} By: {{ blog.createdBy }}</p>
+    <p>{{ blog.createdAt|date('d-M-Y H:i') }} By: {{ blog.createdBy }}
+    {% if (blog.edited) %}
+        (Edited : {{ blog.editedAt|date('d-M-Y H:i') }})</p>
+    {% endif %}
     <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>{{ blog.text|nl2br|raw }}</p>
-    {% if (blog.edited) %}
-        <p>Edited : {{ blog.editedAt|date('d-M-Y H:i') }}</p>
-    {% endif %}
     {% if app.user %}
-        {% if blog.isLikedByUser(app.user) %}
-        <form action="{{ path('app_blog_like', {'id': blog.id}) }}" method="post">
-            <button type="submit">Unlike</button>
-        </form>
-        {% else %}
-        <form action="{{ path('app_blog_like', {'id': blog.id}) }}" method="post">
-            <button type="submit">Like</button>
-        </form>
-        {% endif %}
-        <h2>Comments</h2>
-        <h3>Add a comment</h3>
-        {{ form_start(commentForm) }}
-        {{ form_row(commentForm.text) }}
-        {{ form_end(commentForm) }}
-        {% for comment in blog.comments %}
-            <p>{{ comment.getCreatedBy() }} at {{ comment.getCreatedAt()|date('Y-m-d H:i') }}:</p>
-            <p>{{ comment.getText()|nl2br|raw }}</p>
-        {% endfor %}
+        {% include './comments/like.html.twig' %}
+        {% include './comments/show.html.twig' %}
     {% endif %}
         <p><button><a href="{{ path('app_blog_index') }}">Back to Home</a></button></p>
 
