--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,9 +7,9 @@
         {% for blog in blogs %}
         <div>
             <p><h1>{{ blog.title }}</h1></p>
-            <p>{{ blog.createdAt ? blog.createdAt|date('Y-m-d H:i:s') : '' }} By: {{ blog.createdBy }}</p>
+            <p>{{ blog.createdAt|date('d-M-Y H:i') }} By: {{ blog.createdBy }}</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <p>Likes: {{ blog.getLikesCount() }}</p>
+            <p>Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}</p>
             <button><a href="{{ path('app_blog_show', {'id': blog.id}) }}">Show more</a></button>
         {% endfor %}
 {% endblock %}
