--- a/templates/admin/blogs.html.twig
+++ b/templates/admin/blogs.html.twig
@@ -15,7 +15,7 @@
             <p><iframe width="450" height="253" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             <p>{{ blog.text}}</p>
             <button><a href="{{ path('app_blog_edit', {'id': blog.id}) }}">Edit</a></button>
-            {{ include('blog/_delete_form.html.twig') }}
+            {{ include('admin/blog_delete_form.html.twig') }}
         {% endfor %}
     </section>
 </main>
