--- a/templates/admin/comments.html.twig
+++ b/templates/admin/comments.html.twig
@@ -27,7 +27,7 @@
                 <td>{{ comment.edited ? 'Yes' : 'No' }}</td>
                 <td>{{ comment.editedAt ? comment.editedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    {{ include('comments/_delete_form.html.twig') }}
+                    {{ include('admin/comment_delete_form.html.twig') }}
                 </td>
             </tr>
         {% else %}
@@ -37,6 +37,4 @@
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_comments_new') }}">Create new</a>
 {% endblock %}
