--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -6,6 +6,7 @@
         <li><a href="{{ path('app_admin_blogs') }}">All Blogs</a></li>
         <li><a href="{{ path('app_admin_comments') }}">Comments</a></li>
         <li><a href="{{ path('app_admin_users') }}">Users</a></li>
+        <li><a href="{{ path('app_admin_forbidden_words') }}">Forbidden Words</a></li>
         <li><a href="{{ path('app_admin_notifications') }}">Notifications</a></li>
         {% else %}
         <li><a href="{{ path('app_blog_new') }}">Create blog</a></li>
