--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Blog index{% endblock %}
+{% block title %}WhyNotDIY{% endblock %}
 
 {% block body %}
     <h1>Latest Blogs</h1>
