--- a/templates/security/signup.html.twig
+++ b/templates/security/signup.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="example-wrapper">
-    <h1>Welcome to the Sign Up page!</h1>
+    <h1>Welcome, Sign Up!</h1>
     
     {{ form_start(form) }}
     {{ form_widget(form) }}
