--- a/templates/admin/blogs.html.twig
+++ b/templates/admin/blogs.html.twig
@@ -6,17 +6,23 @@
 <main>
     <section>
         <h2>All Blogs</h2>
+        <div id="blog-container">
         {% for blog in blogs %}
-            <h3><a href="{{ path('app_blog_show', {'id': blog.id}) }}">{{ blog.title }}</a></h3>
+        <div class="blog-item">
+            <h2>{{ blog.title }}</h2>
             <p>{{ blog.createdAt|date('Y-M-d') }} Created By: {{ blog.createdBy }}
             {% if (blog.edited)%}
             (Edited: {{ blog.editedAt|date('d-M-Y') }})
             {% endif %}
             <p><iframe width="450" height="253" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             <p>{{ blog.text}}</p>
+            <button><a href="{{ path('app_blog_show', {'id': blog.id}) }}">View Blog</a></button>
             <button><a href="{{ path('app_blog_edit', {'id': blog.id}) }}">Edit</a></button>
             {{ include('admin/blog_delete_form.html.twig') }}
+        </div>
         {% endfor %}
+        </div>
+        <div id="pagination-loader" data-offset="7"></div>
     </section>
 </main>
 {% endblock %}
