--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,13 +3,21 @@
 {% block title %}WhyNotDIY{% endblock %}
 
 {% block body %}
+<main>
+<section>
     <h1>Latest Blogs</h1>
+    <div id="blog-container">
         {% for blog in blogs %}
-        <div>
+        <div class="blog-item">
             <p><h1>{{ blog.title }}</h1></p>
             <p>{{ blog.createdAt|date('d-M-Y H:i') }} By: {{ blog.createdBy }}</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}</p>
             <button><a href="{{ path('app_blog_show', {'id': blog.id}) }}">Show more</a></button>
+        </div>
         {% endfor %}
+    </div>
+    <div id="pagination-loader" data-offset="7"></div>
+</section>
+</main>
 {% endblock %}
