sanitised pagination - started adding tailwinds

--- a/templates/admin/_blog_items.html.twig
+++ b/templates/admin/_blog_items.html.twig
@@ -4,7 +4,7 @@
     {% if (blog.edited)%}
         (Edited: {{ blog.editedAt|date('d-M-Y') }})
     {% endif %}
-    <p><iframe width="450" height="253" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+    <iframe width="450" height="253" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>{{ blog.text}}</p>
     <button><a href="{{ path('app_blog_show', {'id': blog.id}) }}">View Blog</a></button>
     <button><a href="{{ path('app_blog_edit', {'id': blog.id}) }}">Edit</a></button>
