--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <main>
 <section>
-    <h1>Latest Blogs</h1>
+    <h1 class="text-2xl bg-blue-500">Latest Blogs</h1>
     <div id="blog-container">
         {% for blog in blogs %}
         <div class="blog-item">
