bug fixes and started css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-body, h1, h2, ul, li {
+/* body, h1, h2, ul, li {
     margin: 0;
     padding: 0;
 }
@@ -46,4 +46,4 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px;
-}
+} */
