--- a/templates/admin/blogs.html.twig
+++ b/templates/admin/blogs.html.twig
@@ -25,4 +25,7 @@
         <div id="pagination-loader" data-offset="7"></div>
     </section>
 </main>
+<script>
+    var page = 'Ablogs'
+</script>
 {% endblock %}
