--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
@@ -13,41 +14,19 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
+    <body class="bg-gradient-to-r from-yellow-200 to-yellow-400 h-screen flex flex-col">
     <header>
         {% include 'nav.html.twig' %}
     </header>
-    <body>
-        {% for flashMessage in app.flashes('error') %}
-        <div class="alert alert-error">
-            {{ flashMessage }}
-        </div>
-        {% endfor %}
-        {% for flashMessage in app.flashes('success') %}
-        <div class="alert alert-success">
-            {{ flashMessage }}
-        </div>
-        {% endfor %}
-        {% for flash_message in app.flashes('warning') %}
-        <div class="alert alert-warning">
-            {{ flash_message }}
-        </div>
-        {% endfor %}
+        {% include './security/flash.html.twig' %}
         {% block body %}
         {% endblock %}
-    </body>
-    <footer>
+    <footer class="flex-shrink-0">
         {% include 'footer.html.twig' %}
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="{{ asset('js/pagination.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
-    {% if is_granted('ROLE_admin') %}
-    <script>
-        var userRole = 'admin';
-    </script>
-    {% else %}
-    <script>
-        var userRole = 'user';
-    </script>
-{% endif %}
+    <script src="https://cdn.tailwindcss.com"></script>
+    </body>
 </html>
