--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,1 +1,3 @@
-<p>&copy; {{ 'now'|date('Y') }} Why not DIY!</p>
+<div class="flex bg-gray-800 text-gray-300 h-8 items-center justify-center">
+    <p>&copy; {{ 'now'|date('Y') }} Why not DIY!</p>
+</div>
