--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,3 +1,3 @@
-<div class="flex bg-gray-800 text-gray-300 h-8 items-center justify-center">
+<div class="grid min-w-full place-items-center align-middle h-8 bg-gray-800 text-white font-sans">
     <p>&copy; {{ 'now'|date('Y') }} Why not DIY!</p>
 </div>
