--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,14 +14,14 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
-    <body class="bg-gradient-to-r from-yellow-200 to-yellow-400 h-screen flex flex-col">
+    <body class="bg-gradient-to-r from-white to-gray-500 h-screen flex flex-col font-mono">
     <header>
         {% include 'nav.html.twig' %}
     </header>
         {% include './security/flash.html.twig' %}
         {% block body %}
         {% endblock %}
-    <footer class="flex-shrink-0">
+    <footer>
         {% include 'footer.html.twig' %}
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
