--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
+<main class="h-full">
 <div>
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -13,19 +14,21 @@
             You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
-    <div class="flex justify-center items-center container mx-auto max-w-fit my-6 mh-auto p-8 bg-white">
+    <p class="text-xl font-semibold text-center mt-4">Sign in to Why not DIY!</p>
+    <div class="flex justify-center items-center container mx-auto max-w-fit my-6 mh-auto p-8 bg-gray-200 rounded-md">
 
     <form class="flex flex-col" action="{{ path('app_login') }}" method="post">
-        <h1 class="text-xl font-semibold">Login</h1>
 
+        <label for="emailAddress" class=" text-s">Please enter your login details</label>
         <input class="border rounded my-2 px-1" type="email" id="inputEmailAddress" placeholder="Email" name="emailAddress" value="{{ last_username }}" autocomplete="email" required autofocus>
 
         <input class="border rounded mt-2 mb-6 px-1" type="password" id="inputPassword" placeholder="Password" name="password" required>
 
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-        <button class="inline-block rounded bg-yellow-400 px-4 pb-1.5 pt-2 text-white" type="submit">login</button>
+        <button class="inline-block rounded bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white px-4 pb-1.5 pt-2 font-sans" type="submit">Sign in</button>
     </form>
     </div>
 </div>
+</main>
 {% endblock %}
