--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <main>
-<section class="flex flex-col bg-white bg-opacity-60 w-fit px-6 mt-4 rounded-md mx-auto">
+<section class="flex flex-col bg-white bg-opacity-60 w-fit px-6 rounded-md mx-auto">
     <div class="text-4xl mx-auto mt-2">Latest Blogs</div>
     <div class="" id="blog-container">
         {% for blog in blogs %}
