--- a/templates/home/_blog_items.html.twig
+++ b/templates/home/_blog_items.html.twig
@@ -4,6 +4,6 @@
         <p class=" text-s ml-2">{{ blog.createdAt|date('d-M-Y H:i') }} By: {{ blog.createdBy }}</p>
         <iframe width="750" height="422" src="https://www.youtube.com/embed/{{ blog.videoUrl }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p class="py-0.5 ml-2">Likes: {{ blog.getLikesCount() }} Comments: {{ blog.getCommentsCount() }}</p>
-        <button class="ml-2"><a class="block w-fit h-fit bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" href="{{ path('app_blog_show', {'id': blog.id}) }}">Show more</a></button>
+        <button class="ml-2"><a class="font-sans block w-fit h-fit bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" href="{{ path('app_blog_show', {'id': blog.id}) }}">Show more</a></button>
     </div>
 {% endfor %}
