--- a/templates/blog/new.html.twig
+++ b/templates/blog/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Blog{% endblock %}
 
 {% block body %}
-    <h1>Create new Blog</h1>
+<div class="flex flex-col justify-center container mx-auto max-w-1/2 h-fit my-6 mh-auto p-8 bg-gray-200 rounded-md">
+    <p class="text-center text-2xl font-semibold mb-2">Create new Blog</p>
 
     {{ include('blog/_form.html.twig') }}
-
-    <p><button><a href="{{ path('app_blog_index') }}">Back to Home</a></button></p>
+</div>
 {% endblock %}
