--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -14,7 +14,7 @@
     {% if app.user %}
         {% include './comments/like.html.twig' %}
         {% include './comments/show.html.twig' %}
-        <p><button><a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" href="{{ path('app_blog_index') }}">Back to Home</a></button></p>
+        <button><a class="font-sans block w-full h-full bg-gray-800 text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" href="{{ path('app_blog_index') }}">Back to Home</a></button>
     {% endif %}
     </div>
     <div class="col-start-2 mt-8">{{ blog.text|nl2br|raw }}</div>
